Refactor RecipeConverter to optimize ingredient handling and enhance proto conversion methods